Debug-Zeile um eingebundene Dateien anzuzeigen

--- a/Vorlage_Anglistik.tex
+++ b/Vorlage_Anglistik.tex
@@ -58,6 +58,8 @@
 \def \studienfaecher { (Fachverbindung mit Angaben HF/NF) }
 \def \fachsemester { (Fachsemester) }
 
+% Eingebundene Dateien anzeigen
+%\listfiles
 % Beginn des eigentlichen Dokuments
 \begin{document}
 
