Bibliographie in Literaturverzeichnis umbenannt

--- a/Vorlage_Anglistik.tex
+++ b/Vorlage_Anglistik.tex
@@ -136,8 +136,8 @@ Oh my darling Clementine
 Liste von Zitaten aus Sekundärquellen: Nummer 1 \parencite[][56-59]{Culler1997}, Nummer 2 \parencite[][103]{Baugh2002} , Nummer 3 \cite*[][]{Schabert2000}, Nummer 4 \Cite[][]{Crenshaw1995} , Nummer 5\footcite[][2: 117]{Huehn1995}, Nummer 6 \textcite[][290-297]{Kastovsky1992}, Nummer 7 \parencite[][587]{Wimsatt1959},  Nummer 8 \parencite[][5]{Jones1989} und Nummer 8 \parencite{Willey2003}
 
 Liste von Zitaten aus Primärquellen: Nummer 1\footcite[][35]{Banville2005}, Nummer 2\footcite[][56]{Austen1813}. Nummer 3\footcite[][72]{Wrenn1996}, Nummer 4\footcite[][117]{McEwan1975}, Nummer 5\footcite[][1. 11-16]{Eliot2000}, Nummer 6\footcite[][1.5.189-190]{Shakespeare1985} und Nummer 7\footcite[][1:14:12]{Coppola1992}
-% Die Bibliographie aufgeteilt anhand von Schlüsselwörtern, die auch im keyword-Feld der BibTex-Datei verwendet werden müssen
-\chapter{Bibliographie}
+% Das Literaturverzeichnis aufgeteilt anhand von Schlüsselwörtern, die auch im keyword-Feld der BibTex-Datei verwendet werden müssen
+\chapter{Literaturverzeichnis}
 \printbibliography[keyword=Primaerquelle,heading=subbibliography,title={Primärquellen}]
 \printbibliography[keyword=Sekundaerquelle,heading=subbibliography,title={Sekundärquellen}]
 %\printbibliography
