Hinweise zur noetigen Version von biblatex und biblatex-chicago

--- a/Vorlage_Anglistik.tex
+++ b/Vorlage_Anglistik.tex
@@ -31,7 +31,8 @@
 % Für das Setzen von Versen
 \usepackage{verse}
 % Für die Bibliographie
-% Der Chicago-Stil benötigt eine sehr aktuelle BibLaTex-Version (aktuell 2.8a)
+% Der Chicago-Stil benötigt eine sehr aktuelle BibLaTex-Version (>= 2.8a) 
+% und biblatex-chicago (>= 0.9.9e 2014-01-29)
 % Üblicherweise muss für ein funktionierendes Literaturverzeichnis zunächst
 % *LaTeX ausgeführt werden (muss bei jeder Änderungen der Verweise neu ausgeführt werden
 % und erstellt eine .bcf-Datei), dann Biber mit der so entstandenen .bcf-Datei (muss bei jeder Änderung
